--- a/port.html
+++ b/port.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ArjunV 😊</title>
   <link rel="stylesheet" href="design.css" />
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body class="background">
