--- a/port.html
+++ b/port.html
@@ -18,7 +18,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#education">Education</a>
-      <a href="#Contact">Contact</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
