--- a/port.html
+++ b/port.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ArjunV 😊</title>
   <link rel="stylesheet" href="design.css" />
-  <link rel="icon" href="savicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body class="background">
@@ -18,7 +18,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#education">Education</a>
-      <a href="#contact">Contact</a>
+      <a href="#Contact">Contact</a>
     </nav>
   </header>
 
@@ -129,7 +129,7 @@
 
     <!--Social-->
     <div class="social-icons">
-      <a href="mailto:arjunvasanthakumar2005@gmail.com"><img src="mail-icon.png" alt="Mail" /></a>
+      <a href="mailto:arjunvasanthakumar2005@gmail.com"><img src="mail-icon.jpg" alt="Mail" /></a>
       <a href="https://www.linkedin.com/in/arjun-vasanthakumar-2005/" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn" /></a>
       <a href="https://github.com/Arjxn404" target="_blank"><img src="git-icon.png" alt="GitHub" /></a>
     </div>
@@ -150,18 +150,30 @@
     </form>
   </section>
 
-  <!--Thank You-->
-  <section class="thank-you">
+  <!--Thank You--> 
+<section class="thank-you-wrap">
+  <div class="thank-you-left">
     <h2>Thank You</h2>
     <p>Thank you for visiting my portfolio. I look forward to connecting with you!</p>
     <p>Best regards,</p>
     <p>Arjun Vasanthakumar</p>
-    <p>ECE Student @ KPRIET</p>
+    <p>ECE Student @ <a href="https://www.kpriet.ac.in" target="_blank">KPRIET</a></p>
     <p>Intern @ <a href="https://applifiles.com/" target="_blank">APPLIFIES</a></p>
-  </section>
+  </div>
+
+  
+</section>
 
   <!--Footer-->
   <footer>
+    <div >
+      <h3>Connect with me!</h3>
+      <div style="padding: 10px; display: flex; justify-content: center; gap: 15px;">
+        <img src="mail-icon.jpg" alt="" style="width: 28px; height: 28px;">
+        <img src="git-icon.png" alt="" style="width: 28px; height: 28px;">
+        <img src="linkedin-icon.png" alt="" style="width: 28px; height: 28px;">
+      </div>
+    </div>
     <p>2025 Arjun Vasanthakumar. All rights reserved.</p>
     <p>Last updated: June 2025</p>
   </footer>
